Add distinct and aggregation functionalities with CI integration